# OpenGL_Games

./: Description.txt  OpenGL_Games.sln  README.md
01Platformer/: 01Platformer.vcxproj  01Platformer.vcxproj.filters  Application.cpp  Application.h  Camera.cpp  Camera.h  Character.cpp  Character.h  Clock.h  CollisionDistances.h  Constants.h  Enemy.cpp  Enemy.h  Extension.h  GameObject.cpp  GameObject.h  Level.cpp  Level.h  Quad.cpp  Quad.h  Shader.cpp  Shader.h  Spritesheet.cpp  Spritesheet.h  Spritesheet_old.cpp  Spritesheet_old.h  Texture.cpp  Texture.h  Vector.cpp  Vector.h  main.cpp
02Deathjump/: 02Deathjump.vcxproj  02Deathjump.vcxproj.filters  Animator.cpp  Animator.h  Application.cpp  Application.h  AssetManger.h  Batchrenderer.cpp  Batchrenderer.h  Button.cpp  Button.h  Camera.cpp  Camera.h  Character.h  CharacterSet.cpp  CharacterSet.h  Clock.h  Collider.h  Collision.cpp  Collision.h  Constants.h  Countdown.cpp  Countdown.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Extension.cpp  Extension.h  Extern.cpp  Extern.h  Fireball.cpp  Fireball.h  Game.cpp  Game.h  GameObject.h  Ghost.cpp  Ghost.h  HealthBar.cpp  HealthBar.h  (+54 more)
03Marvin/: 03Marvin.vcxproj  03Marvin.vcxproj.filters  Application.cpp  Application.h  Barnacle.cpp  Barnacle.h  Bee.cpp  Bee.h  Button.cpp  Button.h  Button_ls.cpp  Button_ls.h  CharacterController.cpp  CharacterController.h  CharacterController_cs.cpp  CharacterController_cs.h  CharacterController_old.cpp  CharacterController_old.h  CollisionHandler.cpp  Entity.cpp  (+36 more)
SDKs/wgpu-dawn/: CMakeLists.txt  main.cpp
SDKs/wgpu-dawn/include/: webgpu.h
(+6564 files in other folders)
